--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,38 +1,14 @@
-name: Flutter Web
-on: [push]
+name: Gh-Pages
+
+on:
+  push:
+    branches: [master]
+
 jobs:
   build:
-runs-on: ubuntu-latest
-        
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1
-      with:
-        flutter-version: '2.0.x'
-        channel: 'stable' 
-    - name: Upgrades flutter
-      run: flutter upgrade
-      working-directory: ./example
-    - name: Enable Web
-      run: flutter config --enable-web
-      working-directory: ./example
-    - name: Install dependencies
-      run: flutter packages get
-      working-directory: ./example
-    - name: Build Web
-      run: flutter build web
-      working-directory: ./example
-    - name: Deploy
-      run: |
-        cd example/build/web
-        git init
-        git config user.name  "CI"
-        git config user.email "flutter-ci@github.com"
-        git remote add secure-origin https://${{ secrets.ACCESS_TOKEN }}@github.com/abuanwar072/Responsive-Blog-Theme-using-Flutter.git
-        git checkout -b gh-pages
-        git add .
-        git commit -m "Updated docs"
-        git push --force secure-origin gh-pages
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+      - uses: erickzanardo/flutter-gh-pages@v3
